# Ramadan_Project

./: README.md  index.html  install.sh  main.py  pyproject.toml  run-in-kitty.sh
debian/: changelog  control  copyright  install  rules
packaging/: noorterm.spec
src/noorterm/: __init__.py  __main__.py  browser_fallback.py  image_render.py  rendering.py  theme.py
src/quran_tui/: __init__.py  __main__.py  api.py  browser_fallback.py  image_render.py  model.py  rendering.py  theme.py  ui.py
tests/: test_api.py
